avoid wrapping in tab

--- a/src/Tabs/Tabs.module.css
+++ b/src/Tabs/Tabs.module.css
@@ -12,6 +12,7 @@
   font-weight: bold;
   font-variant: small-caps;
   color: rgba(0, 0, 0, 0.55);
+  white-space: nowrap;
 }
 
 .item:hover {
